[package]
name = "dns-agent"
version = "0.1.0"
authors = ["Clément Nivolle <clement@nivolle.com>"]

[dependencies]
structopt = "0.2"
structopt-derive = "0.2"
warp10 = "0.8"
log = "0.3.8"
env_logger = "0.4.3"
time = "0.1.38"
trust-dns = "0.13"
trust-dns-resolver = "0.7"
toml = "0.4"
serde = "1.0"
serde_derive = "1.0"